# vistir

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  MANIFEST.in  NEWS.rst  Pipfile  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  test_compat.py  tox.ini
.azure-pipelines/templates/: build-package.yml  run-coverage.yml  run-tests.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pypi_upload.yml
docs/: Makefile  conf.py  index.rst  make.bat  quickstart.rst  vistir.backports.functools.rst  vistir.backports.rst  vistir.backports.tempfile.rst  vistir.cmdparse.rst  vistir.compat.rst  vistir.contextmanagers.rst  vistir.cursor.rst  vistir.misc.rst  vistir.path.rst  vistir.rst  vistir.spin.rst  vistir.termcolors.rst
news/: 0.feature  1.bugfix  100.bugfix.rst  102.feature.rst  11.bugfix  11.feature  110.bugfix.rst  111.bugfix.rst  112.feature.rst  116.bugfix.rst  12.feature  13.feature  130.bugfix.rst  16.feature  18.bugfix.rst  19.feature.rst  2.feature  20.feature.rst  22.feature.rst  24.bugfix.rst  26.feature.rst  27.bugfix.rst  28.bugfix.rst  3.bugfix  30.bugfix.rst  32.bugfix.rst  33.bugfix.rst  35.feature  38.feature.rst  4.feature  40.feature.rst  42.feature.rst  46.bugfix  48.feature.rst  49.bugfix.rst  5.feature  51.feature.rst  52.feature.rst  53.feature.rst  55.bugfix.rst  (+20 more)
src/vistir/: __init__.py  _winconsole.py  cmdparse.py  compat.py  contextmanagers.py  cursor.py  environment.py  misc.py  path.py  spin.py  spinner.py  termcolors.py
src/vistir/backports/: .tempfile.py.swp  __init__.py  functools.py  tempfile.py
tasks/: __init__.py
tests/: __init__.py  conftest.py  strategies.py  test_compat.py  test_contextmanagers.py  test_misc.py  test_path.py  test_spinner.py  utils.py
