[metadata]
name = vistir
description = Miscellaneous utilities for dealing with filesystems, paths, projects, subprocesses, and more.
url = https://github.com/sarugaku/vistir
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
long_description_content_type = text/x-rst
license = ISC License
keywords =
    tools
    utilities
    backports
    paths
    spinner
    subprocess
    filesystem

classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
python_requires = >=2.6,!=3.0,!=3.1,!=3.2,!=3.3
setup_requires =
    setuptools>=40.8.0
    invoke
    parver
    wheel
install_requires =
    colorama
    backports.functools_lru_cache;python_version<="3.4"
    backports.shutil_get_terminal_size;python_version<"3.3"
    backports.weakref;python_version<"3.3"
    pathlib2;python_version<"3.5"
    requests
    six

[options.extras_require]
spinner =
    yaspin
dev =
    pre-commit
    mypy;python_version>="3.5"
    isort
    flake8
    flake8-bugbear
    rope
    black;python_version>="3.6"
tests =
    twine
    readme-renderer[md]
    pytest
    pytest-xdist
    pytest-cov
    pytest-timeout
    hypothesis-fspaths
    hypothesis

[bdist_wheel]
universal = 1


[tool:pytest]
strict = true
plugins = cov flake8
addopts = -ra
testpaths = tests/
norecursedirs = .* build dist news tasks docs
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
# select = E,W,F
ignore =
    # The default ignore list:
    # E121,E123,E126,E226,E24,E704,
    D203,F401,E123,E203,W503,E501
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # E231,E402,E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity=13

[isort]
atomic = true
not_skip = __init__.py
line_length = 90
indent = '    '
multi_line_output = 3
known_third_party = colorama,hypothesis,hypothesis_fspaths,invoke,parver,pytest,setuptools,six,towncrier
known_first_party = vistir,tests
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=2.7
