[metadata]
name = vistir
description = Miscellaneous utilities for dealing with filesystems, paths, projects, subprocesses, and more.
url = https://github.com/sarugaku/vistir
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
long_description_content_type = text/x-rst
license = ISC License
keywords =
    tools
    utilities
    backports
    paths
    subprocess
    filesystem

classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
python_requires = >=3.7
setup_requires =
    setuptools>=40.8.0
    wheel

install_requires =
    colorama>=0.3.4,!=0.4.2

[options.extras_require]
requests =
    requests
dev =
    pre-commit
    coverage
    isort
    flake8
    flake8-bugbear;python_version>="3.5"
    rope
    black;python_version>="3.6"
    invoke
    parver
    sphinx
    sphinx-rtd-theme
tests =
    hypothesis
    hypothesis-fspaths
    pytest==4.6.10
    pytest-rerunfailures<9.0
    pytest-xdist
    pytest-timeout
    readme-renderer[md]
    twine
typing =
    mypy;python_version>="3.4"
    mypy-extensions;python_version>="3.4"
    mypytools;python_version>="3.4"
    typed-ast;python_version>="3.4"

[bdist_wheel]
universal = 1


[tool:pytest]
strict = true
plugins = flake8 timeout
addopts = -ra --timeout 300
testpaths = tests/
norecursedirs = .* build dist news tasks docs
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL
    src/vistir/backports/surrogateescape.py ALL
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
# select = E,W,F
ignore =
    # The default ignore list:
    # E121,E123,E126,E226,E24,E704,
    D203,F401,E123,E203,W503,E501
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # E231,E402,E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    src/vistir/backports/surrogateescape.py,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity=13

[isort]
atomic = true
not_skip = __init__.py
line_length = 90
indent = '    '
multi_line_output = 3
known_third_party = colorama,hypothesis,hypothesis_fspaths,invoke,msvcrt,parver,pytest,setuptools,six,towncrier
known_first_party = vistir,tests
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=2.7
